--- a/JavaScript/10 Days of JavaScript/Day 8: Create a Button/button.css
+++ b/JavaScript/10 Days of JavaScript/Day 8: Create a Button/button.css
@@ -11,3 +11,5 @@ button
 {
     cursor: pointer;
 }
+
+/* Link to the problem: https://www.hackerrank.com/challenges/js10-create-a-button?isFullScreen=true&hr_b=1/ */
